--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 
-    <h2>Student Registration Form</h2>
+<!--     <h2>Student Registration Form</h2> -->
 
     <!-- Embedded JotForm -->
     <iframe id="jotform-iframe" src="https://form.jotform.com/250566577142158" width="100%" height="800px"></iframe>
