--- a/index.html
+++ b/index.html
@@ -8,12 +8,7 @@
 </head>
 <body>
 
-    <h2>Student Registration Form</h2>
-
-    <!-- Manual Input Field for Validation -->
-    <label for="student-id-input">Enter Student ID:</label>
-    <input type="text" id="student-id-input" placeholder="Enter Student ID">
-    <button type="submit">Submit</button>
+<!--     <h2>Student Registration Form</h2> -->
 
     <!-- Embedded JotForm -->
     <iframe id="jotform-iframe" src="https://form.jotform.com/250566577142158" width="100%" height="800px"></iframe>
